--- a/sync/index.htm
+++ b/sync/index.htm
@@ -76,7 +76,7 @@
       font-size: 1.2em;
       text-align: center;
       background-color: #ccccc2;
-      background-image: url('https://liturgiadelashoras.github.io/sync/images/fnd.jpg');
+      background-image: url('https://alencuentrocondios.github.io/liturgiadelashoras.github.io/sync/images/fnd.jpg');
       background-repeat: repeat-x;
       visibility: visible;
       font-family: Verdana, Arial, Helvetica, sans-serif;
@@ -90,7 +90,7 @@
       width: 9%;
       box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.1);
       background-color: #ccccc2;
-      background-image: url('https://liturgiadelashoras.github.io/sync/images/fnd.jpg');
+      background-image: url('https://alencuentrocondios.github.io/liturgiadelashoras.github.io/sync/images/fnd.jpg');
       background-repeat: repeat-x;
       line-height: 50%;
       padding-left: 5px;
@@ -112,7 +112,7 @@
       width: 9%;
       box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.1);
       background-color: #ccccc2;
-      background-image: url('https://liturgiadelashoras.github.io/sync/images/fnd.jpg');
+      background-image: url('https://alencuentrocondios.github.io/liturgiadelashoras.github.io/sync/images/fnd.jpg');
       background-repeat: repeat-x;
       line-height: 50%;
       padding-left: 5px;
@@ -271,13 +271,13 @@
     }
   </script>
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-  <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
-  <link rel="apple-touch-icon" sizes="57x57" href="images/apple-touch-icon-57x57.png" />
-  <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png" />
-  <link rel="apple-touch-icon" sizes="76x76" href="images/apple-touch-icon-76x76.png" />
-  <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png" />
-  <link rel="apple-touch-icon" sizes="120x120" href="images/apple-touch-icon-120x120.png" />
-  <link rel="apple-touch-icon" sizes="144x144" href="images/apple-touch-icon-144x144.png" />
+  <link rel="apple-touch-icon" href="https://alencuentrocondios.github.io/liturgiadelashoras.github.io/images/apple-touch-icon.png" />
+  <link rel="apple-touch-icon" sizes="57x57" href="https://alencuentrocondios.github.io/liturgiadelashoras.github.io/images/apple-touch-icon-57x57.png" />
+  <link rel="apple-touch-icon" sizes="72x72" href="https://alencuentrocondios.github.io/liturgiadelashoras.github.io/images/apple-touch-icon-72x72.png" />
+  <link rel="apple-touch-icon" sizes="76x76" href="https://alencuentrocondios.github.io/liturgiadelashoras.github.io/images/apple-touch-icon-76x76.png" />
+  <link rel="apple-touch-icon" sizes="114x114" href="https://alencuentrocondios.github.io/liturgiadelashoras.github.io/images/apple-touch-icon-114x114.png" />
+  <link rel="apple-touch-icon" sizes="120x120" href="https://alencuentrocondios.github.io/liturgiadelashoras.github.io/images/apple-touch-icon-120x120.png" />
+  <link rel="apple-touch-icon" sizes="144x144" href="https://alencuentrocondios.github.io/liturgiadelashoras.github.io/images/apple-touch-icon-144x144.png" />
   <link rel="apple-touch-icon" sizes="152x152" href="images/apple-touch-icon-152x152.png" />
 </head>
 
