--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
   <link href="css/calendar.css" type="text/css" rel="stylesheet">
   <script type="text/javascript" src="js/calendar.js"></script>
-  <link rel="shortcut icon" href="https://alencuentrocondios.github.io/liturgiadelashoras.github.io/images/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="https://alencuentrocondios.github.io/liturgiadelashoras.github.io/favicon.ico" type="image/x-icon" />
 	<link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
 	<link rel="apple-touch-icon" sizes="57x57" href="images/apple-touch-icon-57x57.png" />
 	<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png" />
