--- a/sync/index.htm
+++ b/sync/index.htm
@@ -270,7 +270,7 @@
         return "" + day;
     }
   </script>
-  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="alencuentrocondios.github.io/liturgiadelashoras.github.io/favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon" href="https://alencuentrocondios.github.io/liturgiadelashoras.github.io/images/apple-touch-icon.png" />
   <link rel="apple-touch-icon" sizes="57x57" href="https://alencuentrocondios.github.io/liturgiadelashoras.github.io/images/apple-touch-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="72x72" href="https://alencuentrocondios.github.io/liturgiadelashoras.github.io/images/apple-touch-icon-72x72.png" />
