--- a/sync/index.htm
+++ b/sync/index.htm
@@ -278,7 +278,7 @@
   <link rel="apple-touch-icon" sizes="114x114" href="https://alencuentrocondios.github.io/liturgiadelashoras.github.io/images/apple-touch-icon-114x114.png" />
   <link rel="apple-touch-icon" sizes="120x120" href="https://alencuentrocondios.github.io/liturgiadelashoras.github.io/images/apple-touch-icon-120x120.png" />
   <link rel="apple-touch-icon" sizes="144x144" href="https://alencuentrocondios.github.io/liturgiadelashoras.github.io/images/apple-touch-icon-144x144.png" />
-  <link rel="apple-touch-icon" sizes="152x152" href="images/apple-touch-icon-152x152.png" />
+  <link rel="apple-touch-icon" sizes="152x152" href="https://alencuentrocondios.github.io/liturgiadelashoras.github.io/images/apple-touch-icon-152x152.png" />
 </head>
 
 <body>
