--- a/sync/index.htm
+++ b/sync/index.htm
@@ -270,15 +270,15 @@
         return "" + day;
     }
   </script>
-  <link rel="shortcut icon" href="https://alencuentrocondios.github.io/liturgiadelashoras.github.io/images/favicon.ico" type="image/x-icon" />
-  <link rel="apple-touch-icon" href="https://alencuentrocondios.github.io/liturgiadelashoras.github.io/images/apple-touch-icon.png" />
-  <link rel="apple-touch-icon" sizes="57x57" href="https://alencuentrocondios.github.io/liturgiadelashoras.github.io/images/apple-touch-icon-57x57.png" />
-  <link rel="apple-touch-icon" sizes="72x72" href="https://alencuentrocondios.github.io/liturgiadelashoras.github.io/images/apple-touch-icon-72x72.png" />
-  <link rel="apple-touch-icon" sizes="76x76" href="https://alencuentrocondios.github.io/liturgiadelashoras.github.io/images/apple-touch-icon-76x76.png" />
-  <link rel="apple-touch-icon" sizes="114x114" href="https://alencuentrocondios.github.io/liturgiadelashoras.github.io/images/apple-touch-icon-114x114.png" />
-  <link rel="apple-touch-icon" sizes="120x120" href="https://alencuentrocondios.github.io/liturgiadelashoras.github.io/images/apple-touch-icon-120x120.png" />
-  <link rel="apple-touch-icon" sizes="144x144" href="https://alencuentrocondios.github.io/liturgiadelashoras.github.io/images/apple-touch-icon-144x144.png" />
-  <link rel="apple-touch-icon" sizes="152x152" href="https://alencuentrocondios.github.io/liturgiadelashoras.github.io/images/apple-touch-icon-152x152.png" />
+  <link rel="shortcut icon" href="alencuentrocondios.github.io/liturgiadelashoras.github.io/images/favicon.ico" type="image/x-icon" />
+  <link rel="apple-touch-icon" href="alencuentrocondios.github.io/liturgiadelashoras.github.io/images/apple-touch-icon.png" />
+  <link rel="apple-touch-icon" sizes="57x57" href="alencuentrocondios.github.io/liturgiadelashoras.github.io/images/apple-touch-icon-57x57.png" />
+  <link rel="apple-touch-icon" sizes="72x72" href="alencuentrocondios.github.io/liturgiadelashoras.github.io/images/apple-touch-icon-72x72.png" />
+  <link rel="apple-touch-icon" sizes="76x76" href="alencuentrocondios.github.io/liturgiadelashoras.github.io/images/apple-touch-icon-76x76.png" />
+  <link rel="apple-touch-icon" sizes="114x114" href="alencuentrocondios.github.io/liturgiadelashoras.github.io/images/apple-touch-icon-114x114.png" />
+  <link rel="apple-touch-icon" sizes="120x120" href="alencuentrocondios.github.io/liturgiadelashoras.github.io/images/apple-touch-icon-120x120.png" />
+  <link rel="apple-touch-icon" sizes="144x144" href="alencuentrocondios.github.io/liturgiadelashoras.github.io/images/apple-touch-icon-144x144.png" />
+  <link rel="apple-touch-icon" sizes="152x152" href="alencuentrocondios.github.io/liturgiadelashoras.github.io/images/apple-touch-icon-152x152.png" />
 </head>
 
 <body>
